c - crash     b - bug fix    e - enhancement    f - new feature  n - note


5.0.1.h4
  c - TRQ-2987. Fix a crash around job exits due to incorrect error code handling.

5.0.1
  e - TRQ-2410. Improved qstat behavior in cases where bad job IDs were referenced
      in the command.
  e - TRQ-2460. Two new fields were added to the accounting file for completed jobs:
      total_execution_slots and unique_node_count. total_execution_slots should be
      20 for a job that requests nodes=2:ppn=10. unique_node_count should be the
      number of unique hosts the job occupied.
  e - TRQ-2594. TORQUE now uses the Munge API rather than forking when configured
      with the --enable-munge-auth option.
  e - TRQ-2863. Reduced verbosity in error logging in HA environments.
  e - TRQ-2868. TORQUE now allows for the modification of the output location
      based on the Mother superior hostname. An environment variable ($HOSTNAME)
      has been added to the job's environment.
  e - TRQ-2882. Improved trqauthd error messages to more meaningful and less
      redundant.
  e - TRQ-2890. Added stderr capturing when using -o option.
  b - TRQ-2025. Fixed bug where giving a bad queue name to qstat -Q results in
      duplicate output.
  b - TRQ-2292. Fixed bug where some tasks were incorrectly listed as 0 in 'qstat -a'
      when requesting specific nodes.
  b - TRQ-2367. Fixed bug related to accounting records on large systems.
  b - TRQ-2411. Fixed output format bug in cases where multiple job IDs are passed
      into qstat.
  b - TRQ-2646. Fixed bug where qsub did not process args correctly when using
      a submit filter.
  b - TRQ-2652. Fixed parsing bug when using hostlist ranges in qsub.
  b - TRQ-2653. Fixed build bug related to newer Intel MIC libraries installing
      in different locations.
  b - TRQ-2730. Fixed problem where GPUs were not split between NUMA nodes. You
      now need to specify which gpus belong to each node board in the mom.layout