@@ -596,6 +596,8 @@ int insert_job(
   else
     {
     rc = PBSE_NONE;
+    if (aj == &alljobs)
+      pjob->ji_has_been_removed = false;
     }
 
   aj->unlock();
@@ -662,6 +664,8 @@ int insert_job_after(
     else
       {
       rc = PBSE_NONE;
+      if (aj == &alljobs)
+        pjob->ji_has_been_removed = false;
       }
     }
 
@@ -723,6 +727,8 @@ int insert_job_after(
   else
     {
     rc = PBSE_NONE;
+    if (aj == &alljobs)
+      pjob->ji_has_been_removed = false;
     }
 
   aj->unlock();
@@ -765,6 +771,8 @@ int insert_job_first(
   else
     {
     rc = PBSE_NONE;
+    if (aj == &alljobs)
+      pjob->ji_has_been_removed = false;
     }
 
   aj->unlock();
@@ -864,6 +872,11 @@ int  remove_job(
 
   if (aj->trylock())
     {
+    // Do not attempt to remove a job twice as it won't be found again
+    // once we've unlocked it, resulting in a memory leak.
+    if (pjob->ji_has_been_removed == true)
+      return(PBSE_NONE);
+
     char jobid[PBS_MAXSVRJOBID+1];
     snprintf(jobid, sizeof(jobid), "%s", pjob->ji_qs.ji_jobid);
 
@@ -880,14 +893,14 @@ int  remove_job(
     {
     if (!aj->remove(pjob->ji_qs.ji_jobid))
       rc = THING_NOT_FOUND;
+    else if (aj == &alljobs)
+      pjob->ji_has_been_removed = true;
     }
 
   aj->unlock();
 
   return(rc);
   } /* END remove_job() */
-
-
 
 
 
@@ -940,6 +953,7 @@ job *next_job(
 
   return(pjob);
   } /* END next_job() */
+
 
 
 /* currently this function can only be called for jobs in the alljobs array */
