@@ -3,6 +3,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
 
 5.0.1.h4
   c - TRQ-2987. Fix a crash around job exits due to incorrect error code handling.
+  c - TRQ-3068. Fix a race condition where a job may be deleted but have it's pointer
+      may still be in the alljobs container. (backported from 5.1.1)
 
 5.0.1
   e - TRQ-2410. Improved qstat behavior in cases where bad job IDs were referenced
